--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
 			</div>
 			<div class="col">
 				<div class="info">
+					<div>
 					<h2>VITAMIN</h2>
 					<p class="sub-title">6년 연속 브랜드 대상 NO.1 비타민</p>
+				</div>
 					<p>레모나는 1983년 국내 최초로 산제 비타민C로 출시되어 ‘비타민C는 노란색 레모나’라는 이미지를 각인 시키며 장수 브랜드로 사랑받고 있으며 이제는 해외에서도 이너뷰티 제품으로 각광받는
 						대표적인
 						한류제품이 되었습니다.</p>
@@ -82,6 +84,31 @@
 				</div>
 			</div>
 		</div>
+	</section>
+
+	<section id="main-section2">
+		<div class="container">
+			<div class="col">
+				<h2>제품소개</h2>
+				<p>아름다운 건강과 행복을 추구하는 경남제약의 레모나를 소개합니다.</p>
+				<img src="images/lemona-logo.png" alt="레모나 로고">
+			</div><!-- col -->
+			<div class="col">
+				<h2>레모나 히스토리</h2>
+				<p>국민 건강 대표  브랜드 경남제약 레모나의  역사를 소개합니다.</p>
+				<img src="images/icon-history.png" alt="레모나 히스토리">
+			</div><!-- col -->
+			<div class="col">
+				<h2>홍보영상</h2>
+				<p>레모나의 홍보영상을 보실 수 있습니다.</p>
+				<img src="images/icon-play.png" alt="홍보영상">
+			</div><!-- col -->
+			<div class="col">
+				<h2>FAQ</h2>
+				<p>레모나에 대해 궁금한 점을 알려드립니다.</p>
+				<img src="images/icon-faq.png" alt="FAQ">
+			</div><!-- col -->
+		</div><!-- container -->
 	</section>
 
 </body>
