--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			</h1>
 			<nav id="gnb">
 				<ul>
-					<li><a href="#">레모나</a></li>
-					<li><a href="#">제품광고</a></li>
+					<li><a href="#main-section1">레모나</a></li>
+					<li><a href="#main-section2">제품광고</a></li>
 					<li><a href="#">광고</a></li>
 				</ul>
 			</nav>
@@ -74,9 +74,9 @@
 			<div class="col">
 				<div class="info">
 					<div>
-					<h2>VITAMIN</h2>
-					<p class="sub-title">6년 연속 브랜드 대상 NO.1 비타민</p>
-				</div>
+						<h2>VITAMIN</h2>
+						<p class="sub-title">6년 연속 브랜드 대상 NO.1 비타민</p>
+					</div>
 					<p>레모나는 1983년 국내 최초로 산제 비타민C로 출시되어 ‘비타민C는 노란색 레모나’라는 이미지를 각인 시키며 장수 브랜드로 사랑받고 있으며 이제는 해외에서도 이너뷰티 제품으로 각광받는
 						대표적인
 						한류제품이 되었습니다.</p>
@@ -95,10 +95,10 @@
 			</div><!-- col -->
 			<div class="col">
 				<h2>레모나 히스토리</h2>
-				<p>국민 건강 대표  브랜드 경남제약 레모나의  역사를 소개합니다.</p>
+				<p>국민 건강 대표 브랜드 경남제약 레모나의 역사를 소개합니다.</p>
 				<img src="images/icon-history.png" alt="레모나 히스토리">
 			</div><!-- col -->
-			<div class="col">
+			<div class="col youtube">
 				<h2>홍보영상</h2>
 				<p>레모나의 홍보영상을 보실 수 있습니다.</p>
 				<img src="images/icon-play.png" alt="홍보영상">
@@ -111,6 +111,17 @@
 		</div><!-- container -->
 	</section>
 
+	<div class="modal">
+		<div class="box">
+		<iframe src="https://www.youtube.com/embed/PZjNU6Vu4Mg" title="YouTube video player"
+			frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+			allowfullscreen>
+		</iframe>
+		<button class="btn-close">
+			<i class="bi bi-x-circle"></i>
+		</button>
+	</div><!-- box -->
+	</div>
 </body>
 
 </html>
